<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/step5_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/step5_subtitle" />

        <RadioGroup
            android:id="@+id/rgCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbIT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_it" />

            <RadioButton
                android:id="@+id/rbGB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_gb" />

            <RadioButton
                android:id="@+id/rbUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_us" />

            <RadioButton
                android:id="@+id/rbDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_de" />

            <RadioButton
                android:id="@+id/rbFR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_fr" />

        </RadioGroup>

    </LinearLayout>
</ScrollView>
